// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Member correctly when user is admin 1`] = `
<div
  className="member"
>
  <div
    className="member-img-info"
  >
    <div
      className="member-img-container"
    >
      <img
        alt="img"
        className="member-img"
        src={null}
      />
    </div>
    <div
      className="member-info"
    >
      <div
        className="member-name"
      >
        <span>
          dummy
        </span>
      </div>
    </div>
  </div>
  <div />
  <div>
    <div
      className="ant-btn-group ant-dropdown-button"
    >
      <button
        className="ant-btn ant-btn-default"
        onClick={[Function]}
        type="button"
      />
      <button
        className="ant-btn ant-btn-default ant-btn-icon-only ant-dropdown-trigger"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <span
          aria-label="more"
          className="anticon anticon-more"
          role="img"
          style={
            Object {
              "color": "black",
              "fontSize": "15px",
            }
          }
        >
          <svg
            aria-hidden="true"
            data-icon="more"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders Member correctly when user is normal user 1`] = `
<div
  className="member"
>
  <div
    className="member-img-info"
  >
    <div
      className="member-img-container"
    >
      <img
        alt="img"
        className="member-img"
        src={null}
      />
    </div>
    <div
      className="member-info"
    >
      <div
        className="member-name"
      >
        <span>
          dummy
        </span>
      </div>
    </div>
  </div>
  <div />
  <div>
    <div
      className="ant-btn-group ant-dropdown-button"
    >
      <button
        className="ant-btn ant-btn-default"
        onClick={[Function]}
        type="button"
      />
      <button
        className="ant-btn ant-btn-default ant-btn-icon-only ant-dropdown-trigger"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <span
          aria-label="more"
          className="anticon anticon-more"
          role="img"
          style={
            Object {
              "color": "black",
              "fontSize": "15px",
            }
          }
        >
          <svg
            aria-hidden="true"
            data-icon="more"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders Member correctly when user is the currentuser 1`] = `
<div
  className="member"
>
  <div
    className="member-img-info"
  >
    <div
      className="member-img-container"
    >
      <img
        alt="img"
        className="member-img"
        src={null}
      />
    </div>
    <div
      className="member-info"
    >
      <div
        className="member-name"
      >
        <div>
          <span>
            dummy
             
          </span>
          <span
            aria-label="crown"
            className="anticon anticon-crown"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="crown"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M899.6 276.5L705 396.4 518.4 147.5a8.06 8.06 0 00-12.9 0L319 396.4 124.3 276.5c-5.7-3.5-13.1 1.2-12.2 7.9L188.5 865c1.1 7.9 7.9 14 16 14h615.1c8 0 14.9-6 15.9-14l76.4-580.6c.8-6.7-6.5-11.4-12.3-7.9zm-126 534.1H250.3l-53.8-409.4 139.8 86.1L512 252.9l175.7 234.4 139.8-86.1-53.9 409.4zM512 509c-62.1 0-112.6 50.5-112.6 112.6S449.9 734.2 512 734.2s112.6-50.5 112.6-112.6S574.1 509 512 509zm0 160.9c-26.6 0-48.2-21.6-48.2-48.3 0-26.6 21.6-48.3 48.2-48.3s48.2 21.6 48.2 48.3c0 26.6-21.6 48.3-48.2 48.3z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div />
</div>
`;
